--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,7 +26,7 @@ jobs:
           sudo cmake --build build/ --target install
           pwd
 
-      - name: check pwd
-        run: pwd
+      - name: Check cmake version
+        run: cmake --version
 
 
