Finalize CMake and workflow files

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -26,7 +26,12 @@ jobs:
           sudo cmake --build build/ --target install
           pwd
 
-      - name: Check cmake version
-        run: cmake --version
+      - name: Build dragon and run tests
+        run: |
+          mkdir build; cd build
+          cmake ../
+          make
+          ctest -j4
+
 
 
